--- a/.github/workflows/test.yml
+++ b/.github/workflows/test.yml
@@ -22,8 +22,7 @@ jobs:
         - name: conda build
           run: |
             source $CONDA/bin/activate && conda activate build
-            mkdir -p ./conda-bld
-            VERSION=`hatch version` conda build -c conda-forge -c defaults --override-channels conda.recipe --output-folder ./conda-bld
+            make build
         - name: Upload the build artifact
           uses: actions/upload-artifact@65c4c4a1ddee5b72f698fdd19549f0f0fb45cf08 # v4.6.0
           with:
